[package]
name = "fling"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["full"] }
futures = "0.3.31"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "time", "full", "process"]}
clap = {version = "4.5.41", features = ["derive"]}
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bluetooth-serial-port = "0.3"
whoami = "1.4"
uuid = { version = "1.0", features = ["v4"] } 
chrono = "0.4"