[package]
name = "fling"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "time", "full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
indicatif = "0.17"
socket2 = "0.5"
zstd = "0.12"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
anyhow = "1.0.98"
futures-lite = "2.6.1"
whoami = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }
bluetooth-serial-port = "0.3"
nix = { version = "0.30.1", features = ["socket"] }

[target.'cfg(target_os = "macos")'.dependencies]
bluest = "0.6.9"
